1. Single Node Pattern/1.2. Circuit Breaker/circuitbreaker-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: circuitbreaker-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: circuitbreaker-service
              servicePort: 80
          - path: /alive
            backend:
              serviceName: circuitbreaker-service
              servicePort: 80
          - path: /ready
            backend:
              serviceName: circuitbreaker-service
              servicePort: 80
      host: circuitbreaker-service
